syntax = "proto3";

package laptop;

import "memory.proto";

option go_package = 'laptop';

message CPU{
    string brand = 1;
    string name = 2 ;
    uint32 no_of_cores = 3;
    uint32 no_of_threads = 4;
    double min_ghz = 5;
    double maz_ghz = 6;
}

message GPU{
    string brand = 1;
    string name = 2 ;
    double min_ghz = 3;
    double maz_ghz = 4;
    Memory memory = 5;
}